# AndroidBootImageKitchen

./: .gitignore  README.md  build.gradle  settings.gradle
app/: build.gradle  proguard-rules.pro
app/release/: app-release.apk.idsig  output-metadata.json
app/release/baselineProfiles/0/: app-release.dm
app/release/baselineProfiles/1/: app-release.dm
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  Jni.cc  Log.cc  Tools.cc
app/src/main/cpp/include/: SHA1FileHelper.hpp  TinySHA1.hpp  bootconfig.h  compressor.hpp  config.h  cpio_build.hpp  cpio_extract.hpp  decompressor.hpp  log.h  pocketlzma.hpp  tools.h  vendorbootconfig.h
app/src/main/cpp/include/lzma/: lzma12.h
app/src/main/cpp/liblz4/: CMakeLists.txt  lz4io.c  lz4io.h
app/src/main/cpp/mkbootimg/: bootimg.cc  bootimg.h  utils.cc  utils.h  vendorbootimg.cc  vendorbootimg.h
app/src/main/cpp/unpackbootimg/: bootimg.cc  bootimg.h  utils.cc  utils.h  vendorbootimg.cc  vendorbootimg.h
app/src/main/java/com/oops/abik/: ABIKBridge.kt  ABIKCore.kt  DataHelper.kt  MainActivity.kt
app/src/main/res/drawable/: divider_vertical.xml  ic_build.xml  ic_delete.xml  ic_download.xml  leanback_banner_foreground.xml
app/src/main/res/layout/: abik_main.xml
app/src/main/res/mipmap-anydpi-v26/: leanback_banner.xml
app/src/main/res/values/: colors.xml  leanback_banner_background.xml  strings.xml  styles.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
